updated html for final project

--- a/index.html
+++ b/index.html
@@ -1,2 +1,65 @@
-Hello world. testing 123
-test test test
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>WDIM268</title>
+		<link href="style.css" rel="stylesheet" type="text/css">
+	</head>
+	<body>
+		<header>
+			<!--"WDIM268 final project website" are H1 image replacement.-->
+			<h1>WDIM268</h1>
+			<!--Font is "Fertigo Pro", found at Font Squirrel. -->
+			<h2>Final project website</h2>
+			<!--Full inline navigation. Hover state orange bg for extra points.-->
+			<nav>
+				<ul>
+					<li>HOME</li>
+					<li>ABOUT</li>
+					<li>SERVICES</li>
+					<li>PORTFOLIO</li>
+					<li>BLOG</li>
+					<li>CONTACT</li>
+					<li>PRICING</li>
+					<li>Login</li>
+					<p>or</p>
+					<li>SIGN UP</li>
+				</ul>
+			</nav>
+		</header>
+		<section>
+			<h1>This isn't as hard as it looks.<br>I promise.</h1>
+			<h2>Because you are the next generation of web designers and developers.</h2>
+			<p><strong>Gratuitous octopus niacin, sodium glutimate.</strong> Quote me on an estimate et non interruptus stadium.</p>
+			<button name="GetAQuote">GET A QUOTE</button>
+			<button name="ViewPortfolio">VIEW PORTFOLIO</button>
+			<img src="#"  alt="Two of the featured work samples"/>
+		</section>
+		<section>
+			<header>
+				<nav>
+					<ul>
+						<li><button name="WebDesign"><img src="#" alt="image of a computer" />WEB DESIGN</button></li>
+						<li><button name="Marketing"><img src="#" alt="image of a graph" />MARKETING</button></li>
+						<li><button name="Consulting"><img src="#" alt="image of a paper and pen" />CONSULTING</button></li>
+						<li><button name="Support"><img src="#" alt="image of a business man" />SUPPORT</button></li>
+					</ul>
+				</nav>
+			</header>
+			<figure>
+				<img src="#" alt="Image of a section of a website" />
+				<figcaption><i>Freelance Designer</i> - January 2009</figcaption>
+			</figure>
+			<h1>We make the best websites!</h1>
+			<p>Because web design is our passion and that's what we do.</p>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			<ul>
+		</section>
+	</body>
+</html>
