final project finished

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<header>
 			<div id="header_top">
 				<div class="wrapper">
-					<h1><strong>WDIM268</strong> Final project website</h1>
+					<a href="index.html"><h1><strong>WDIM268</strong> Final project website</h1></a>
 					<img src='img/search.jpg' alt='image of a search area'/>
 				</div>
 				<div class="clear"></div>
@@ -21,14 +21,13 @@
 				<div class="wrapper">
 					<nav id="global_nav">
 					  <ul>
-					    <li><a href="#">Home</a></li>
-					    <li><a href="#">About</a></li>
+					    <li><a href="index.html">Home</a></li>
+					    <li><a class="active" href="about.html">About</a></li>
 					    <li><a href="#">Services</a></li>
-					    <li><a href="#">Portfolio</a></li>
-					    <li><a href="#">Blog</a></li>
-					    <li><a href="#">Contact</a></li>
-					    <li><a href="#">Pricing</a></li>
-
+					    <li><a href="portfolio.html">Portfolio</a></li>
+					    <li><a href="blog.html">Blog</a></li>
+					    <li><a href="contact.html">Contact</a></li>
+					    <li><a href="pricing.html">Pricing</a></li>
 					  </ul>
 					</nav>
 
@@ -45,7 +44,29 @@
 		<div id="bg">
 			<div class="wrapper">
 				<div class="body_color">
-					<div>
+					<aside>
+						<nav>
+							<strong>Free Call</strong>
+							<p>0800 568 954</p>
+							<ul>
+								<li><a class="active" href="#">Overview</a></li>
+								<li><a href="#">Team</a></li>
+								<li><a href="#">News</a></li>
+								<li><a href="#">Careers</a></li>
+								<li><a href="#">Locations</a></li>
+							</ul>
+						</nav>
+						<ul class="service">
+							<li>Design</li>					
+							<li>(X)HTML/Css</li>
+							<li>Javascript</li>
+							<li>Custom CMS (BVD)</li>
+							<li>Project management</li>
+							<li>Hosting</li>
+							<li>Support</li>
+						</ul>
+					</aside>
+					<div class="body_main">
 						<h1>About BVD</h1>
 						<h2>The best design agency in the world</h2>
 						<h3>What can we offer?</h3>
@@ -58,32 +79,11 @@
 					<div class="clear"></div>
 
 					<div>
-						<aside>
-							<nav>
-								<strong>Free Call</strong>
-								<p>0800 568 954</p>
-								<ul>
-									<li><a href="#">Overview</a></li>
-									<li><a href="#">Team</a></li>
-									<li><a href="#">News</a></li>
-									<li><a href="#">Careers</a></li>
-									<li><a href="#">Locations</a></li>
-								</ul>
-							</nav>
-								<ul>
-									<li>Design</li>					
-									<li>(X)HTML/Css</li>
-									<li>Javascript</li>
-									<li>Custom CMS (BVD)</li>
-									<li>Project management</li>
-									<li>Hosting</li>
-									<li>Support</li>
-								</ul>
-						</aside>
+						
 					</div>
 				
 					<div class="clear"></div>
-					<section>
+					<section class="testimonial">
 						<div>
 							<h1>WDIM268 is the best agency I've ever worked with...</h1>
 							<q>"These guys are simply awesome. I sent them my brief, they answered within few hours and one week later they delivered me the best design ever!"</q>
