--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<div id="header_top">
 				<div class="wrapper">
-					<h1><strong>WDIM268</strong> Final project website</h1>
+					<a href="index.html"><h1><strong>WDIM268</strong> Final project website</h1></a>
 					<img src='img/search.jpg' alt='image of a search area'/>
 				</div>
 				<div class="clear"></div>
@@ -19,14 +19,13 @@
 				<div class="wrapper">
 					<nav id="global_nav">
 					  <ul>
-					    <li><a href="#">Home</a></li>
-					    <li><a href="#">About</a></li>
+					    <li><a class="active" href="index.html">Home</a></li>
+					    <li><a href="about.html">About</a></li>
 					    <li><a href="#">Services</a></li>
-					    <li><a href="#">Portfolio</a></li>
-					    <li><a href="#">Blog</a></li>
-					    <li><a href="#">Contact</a></li>
-					    <li><a href="#">Pricing</a></li>
-
+					    <li><a href="portfolio.html">Portfolio</a></li>
+					    <li><a href="blog.html">Blog</a></li>
+					    <li><a href="contact.html">Contact</a></li>
+					    <li><a href="pricing.html">Pricing</a></li>
 					  </ul>
 					</nav>
 
@@ -39,6 +38,7 @@
 				<div class="clear"></div>
 			</div>
 		</header>
+		
 		<div id="hero_picture">
 			<div class="wrapper">
 				<div class="left50">
@@ -86,7 +86,7 @@
 				<div class="right50">
 					<h1>We make the best websites!</h1>
 					<h2>Because web design is our passion and that's what we do.</h2>
-					<ul>
+					<ul class="service">
 						<li>Design</li>
 						<li>(X)HTML/Css</li>
 						<li>Javascript</li>
@@ -100,7 +100,7 @@
 				</div>
 				<div class="clear"></div>
 
-				<section>
+				<section class="testimonial">
 					<div>
 						<h1>WDIM268 is the best agency I've ever worked with...</h1>
 						<q>"These guys are simply awesome. I sent them my brief, they answered within few hours and one week later they delivered me the best design ever!"</q>
@@ -214,13 +214,13 @@
 						<div class="float_right">
 							<nav>
 							  <ul>
-							    <li><a href="#">Home</a></li>
-							    <li><a href="#">About</a></li>
+							    <li><a href="index.html">Home</a></li>
+							    <li><a href="about.html">About</a></li>
 							    <li><a href="#">Services</a></li>
-							    <li><a href="#">Portfolio</a></li>
-							    <li><a href="#">Blog</a></li>
-							    <li><a href="#">Contact</a></li>
-							    <li><a href="#">Pricing</a></li>
+							    <li><a href="portfolio.html">Portfolio</a></li>
+							    <li><a href="blog.html">Blog</a></li>
+							    <li><a href="contact.html">Contact</a></li>
+							    <li><a href="pricing.html">Pricing</a></li>
 							  </ul>
 							</nav>
 						</div>
