--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,7 @@
 		<header>
 			<div id="header_top">
 				<div class="wrapper">
-					<h1><strong>WDIM268</strong> Final project website</h1>
+					<a href="index.html"><h1><strong>WDIM268</strong> Final project website</h1></a>
 					<img src='img/search.jpg' alt='image of a search area'/>
 				</div>
 				<div class="clear"></div>
@@ -20,14 +20,13 @@
 				<div class="wrapper">
 					<nav id="global_nav">
 					  <ul>
-					    <li><a href="#">Home</a></li>
-					    <li><a href="#">About</a></li>
+					    <li><a href="index.html">Home</a></li>
+					    <li><a href="about.html">About</a></li>
 					    <li><a href="#">Services</a></li>
-					    <li><a href="#">Portfolio</a></li>
-					    <li><a href="#">Blog</a></li>
-					    <li><a href="#">Contact</a></li>
-					    <li><a href="#">Pricing</a></li>
-
+					    <li><a href="portfolio.html">Portfolio</a></li>
+					    <li><a href="blog.html">Blog</a></li>
+					    <li><a href="contact.html">Contact</a></li>
+					    <li><a class="active" href="pricing.html">Pricing</a></li>
 					  </ul>
 					</nav>
 
@@ -44,7 +43,7 @@
 		<div id="bg">
 			<div class="wrapper">
 				<div class="body_color">
-					<div>
+					<div class="body_main">
 						<div class="float_left">
 							<h1>Pricing</h1>
 							<h2>Because not all services are the same</h2>
